# ObjTrackerGrapher

./: .gitignore  .pylintrc  CLAUDE.md  COMPILING.md  GIT_TIPS.md  LICENSE  Readme.md  pyproject.toml  requirements.txt  rotateSoccerBallTesting.py
docs/: pull_request_template.md
src/: GUI_Tracker.py  GUI_main_program.py  color_tracker.py  graph_of_trendlines.py  npy_from_image.py  real_time_color_tracker.py  track_from_recorded_file.py
src/tracker/lib/: GUI_Base.ui  GUI_Base.ui.autosave  GUI_color_tracker.py  GUI_graphing_trendlines.py  GUI_library.py  GUI_load_tables.py  GUI_real_time_color_tracker.py  GUI_tables.py  GUI_tracker.py  color.py  general.py  graphing.py  graphs_right_after.py  help.html  help1.html  infrared.py  intel_realsense_D435i.py  object_tracking.py  setup_files.py  user_input.py
src/tracker/lib/cameras/: camera.py  camera_manager.py  intel_realsense_D435i.py  oak_d_lite.py
src/tracker/lib/help1_files/: filelist.xml
