[project]
name = "objtrackergrapher"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "GPL-3.0"}
readme = "README.md"
requires-python = "3.11.9"
dependencies = [
    "antlr4-python3-runtime (>=4.9.0,<4.10.0)",
    "atomicwrites (>=1.4.1,<2.0.0)",
    "attrs (>=25.3.0,<26.0.0)",
    "certifi (>=2025.6.15,<2026.0.0)",
    "chardet (>=5.2.0,<6.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "pyqtgraph (>=0.13.7,<0.14.0)",
]

[tool.poetry]
package-mode = false
packages = [
    # Needed so some tools can find the code when you say "import tracker"
    { include = "tracker", from = "src" }
]

# These should be dependencies - not dev dependencies. 
# Dev dependencies are only for tools needed for testing or doing other developer related tasks
# That are not needed for actually running the program
[tool.poetry.group.dev.dependencies]
cycler = "^0.12.1"
cython = "^3.1.2"
docopt = "^0.6.2"
idna = "^3.10"
imageio = "^2.37.0"
importlib-metadata = "^8.7.0"
imutils = "^0.5.4"
kiwisolver = "^1.4.8"
keyboard = "^0.13.5"
math3 = "^1.0"
matplotlib = "^3.10.3"
more-itertools = "^10.7.0"
mouseinfo = "^0.1.3"
mpmath = "^1.3.0"
mqtt = "^0.0.1"
mqtt-client = "^1.6.1"
numpy = ">=1.18,<2.6"
opencv-contrib-python = "^4.11.0.86"
packaging = "^25.0"
paho-mqtt = "^2.1.0"
pandas = "^2.3.0"
pillow = "^11.2.1"
pluggy = "^1.6.0"
py = "^1.11.0"
pyautogui = "^0.9.54"
pygetwindow = "^0.0.9"
pymsgbox = "^1.0.9"
pyparsing = "^3.2.3"
pyperclip = "^1.9.0"
pypozyx = "^1.3.0"
pypozyx-i2c = "^1.3.10"
pyqt5 = "5.15.11"
pyqt5-qt5 = "5.15.2"
pyqtgraph = "0.13.7"
pyrealsense2 = "^2.55.1.6486"
pyrect = "^0.2.0"
pyscreeze = "^1.0.1"
pyserial = "^3.5"
pytest = "^8.4.1"
python-dateutil = "^2.9.0.post0"
python-osc = "^1.9.3"
pytweening = "^1.2.0"
pytz = "^2025.2"
requests = "^2.32.4"
scipy = ">=1.10.0,<1.16.0"
setuptools = "^80.9.0"
simplejson = "^3.20.1"
six = "^1.17.0"
smbus2 = "^0.5.0"
stix2 = "^3.0.1"
stix2-patterns = "^2.0.0"
sympy = "^1.14.0"
terminaltables = "^3.1.10"
urllib3 = "^2.5.0"
wcwidth = "^0.2.13"
zipp = "^3.23.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
